Project

General

Profile

Actions

Bug #9315

closed

Segfault when calling super in rspec mocks with and_call_original [linux]

Bug #9315: Segfault when calling super in rspec mocks with and_call_original [linux]

Added by jgraichen (Jan Graichen) over 12 years ago. Updated over 12 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.1.0p0 (2013-12-25 revision 44422) [x86_64-linux]
[ruby-core:59358]

Description

I've tried running my test suite [1] on Ruby 2.1 resulting in segmentation faults. I've created a smaller rspec test [2] reproducing the segfault. I still haven't found a way to reproduce the segfault without rspec mocks. Run the example via rspec test.rb. Same script on Ruby 2.0 works. Used linux is a Debian Sid.

[1] https://travis-ci.org/jgraichen/acfs/jobs/16069122#L87
[2] https://gist.github.com/jgraichen/8159849

I've attached the segfault output.


Files

ruby.log (42 KB) ruby.log jgraichen (Jan Graichen), 12/28/2013 11:17 PM

Related issues 1 (0 open — 1 closed)

Is duplicate of Ruby - Bug #9309: Crash while running testsClosedActions
Actions

Also available in: PDF Atom